# copy.vidyoot.dev

./: .env.dist  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
backend/: Cargo.toml  diesel.toml
backend/migrations/2025-06-09-025154_create_notes/: up.sql
backend/migrations/2025-07-01-064740_add_parent_id_to_notes/: down.sql  up.sql
backend/migrations/2025-07-01-081550_add_on_delete_cascade_to_parent_fk/: down.sql  up.sql
backend/migrations/2025-07-01-120000_create_note_versions/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: NotFound.tsx  createNote.tsx  submit.tsx  viewNote.tsx
frontend/src/components/ui/: input.tsx  popover.tsx
src/: App.css  App.tsx
src/components/: createNote.tsx  submit.tsx  viewNote.tsx
src/components/ui/: copyButton.tsx  editor.tsx
src/types/: quilljs-markdown.d.ts
