[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
serde_json = "1.0"
log = "0.4"